--- a/oaz_vulkan_wrapper/oaz_vulkan_wrapper.vcxproj.filters
+++ b/oaz_vulkan_wrapper/oaz_vulkan_wrapper.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="oaz_vulkan_wrapper_core.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="oaz_vulkan_wrapper_debugmessenger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oaz_vulkan_wrapper.h">
@@ -45,6 +48,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="oaz_vulkan_wrapper_core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="oaz_vulkan_wrapper_data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="oaz_vulkan_wrapper_debugmessenger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
