--- a/oaz_graphics/oaz_graphics.vcxproj.filters
+++ b/oaz_graphics/oaz_graphics.vcxproj.filters
@@ -18,10 +18,7 @@
     <ClCompile Include="oaz_graphics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="oaz_graphics_core.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="oaz_graphics_window.cpp">
+    <ClCompile Include="oaz_graphics_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,10 +26,7 @@
     <ClInclude Include="oaz_graphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="oaz_graphics_window.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="oaz_graphics_core.h">
+    <ClInclude Include="oaz_graphics_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
