Add: surface class

--- a/oaz_vulkan_wrapper/oaz_vulkan_wrapper.vcxproj.filters
+++ b/oaz_vulkan_wrapper/oaz_vulkan_wrapper.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="oaz_vulkan_wrapper_debugmessenger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="oaz_vulkan_wrapper_surface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oaz_vulkan_wrapper.h">
@@ -54,6 +57,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="oaz_vulkan_wrapper_debugmessenger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="oaz_vulkan_wrapper_surface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="oaz_vulkan_wrapper_physicaldevice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
