--- a/oaz_vulkan_wrapper/oaz_vulkan_wrapper.vcxproj.filters
+++ b/oaz_vulkan_wrapper/oaz_vulkan_wrapper.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="oaz_vulkan_wrapper_surface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="oaz_vulkan_wrapper_devicemanager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oaz_vulkan_wrapper.h">
@@ -62,7 +65,7 @@
     <ClInclude Include="oaz_vulkan_wrapper_surface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="oaz_vulkan_wrapper_physicaldevice.h">
+    <ClInclude Include="oaz_vulkan_wrapper_devicemanager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
